--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: 3.6
+version: '3.8'
 services:
   postgres:
-    container_name: postgres
+    container_name: postgres_chat_app
     image: postgres:latest
     ports:
       - "5432:5432"
@@ -13,7 +13,7 @@ services:
       - postgres
   pgadmin:
     links:
-      - postgres:postgres
+      - postgres:postgres_chat_app
     container_name: pgadmin
     image: dpage/pgadmin4
     ports:
